bin/c_parser.output
Terminals unused in grammar

   TAuto
   TDouble
   TStruct
   TBreak
   TElse
   TLong
   TSwitch
   TCase
   TEnum
   TRegister
   TTypedef
   TChar
   TExtern
   TUnion
   TConst
   TFloat
   TShort
   TUnsigned
   TContinue
   TFor
   TSigned
   TVoid
   TDefault
   TGoto
   TVolatile
   TDo
   TIf
   TStatic
   TWhile
   TSizeof
   TOpenSqBracket
   TCloseSqBracket
   TDot
   TBitwiseAnd
   TTilde
   TBang
   TGreater
   TLess
   TCarat
   TPipe
   TQuestion
   TColon
   TArrow
   TIncrement
   TDecrement
   TLeftShift
   TRightShift
   TLessEqual
   TGreaterEqual
   TEquals
   TNotEqual
   TLogicalAnd
   TLogicalOr
   TStarEquals
   TSlashEquals
   TPercentEquals
   TPlusEquals
   TMinusEquals
   TLeftShiftEquals
   TRightShiftEquals
   TAndEquals
   TCaratEquals
   TPipeEquals
   TEllipsis
   TCharConstVal
   TFloatVal
   TStringLit
   TNewline


Grammar

    0 $accept: FunctionDef $end

    1 FunctionDef: TInt TIdentifier TOpenBracket ParamDec TComma ParamDec TCloseBracket CompoundStat

    2 ParamDec: TInt TIdentifier

    3 CompoundStat: TOpenCurlyBrace Declaratorlist Statementlist TCloseCurlyBrace
    4             | TOpenCurlyBrace Statementlist TCloseCurlyBrace
    5             | TOpenCurlyBrace Declaratorlist TCloseCurlyBrace

    6 Statementlist: Statement
    7              | Statementlist Statement

    8 Declaratorlist: Declarator
    9               | Declaratorlist Declarator

   10 Declarator: TInt TIdentifier TSemicolon
   11           | TInt TIdentifier TAssign Exp TSemicolon

   12 Statement: JumpStat
   13          | ExpStat

   14 JumpStat: TReturn Exp TSemicolon
   15         | TReturn TSemicolon

   16 ExpStat: Exp TSemicolon
   17        | TSemicolon

   18 Exp: AssignmentExp

   19 AssignmentExp: TIdentifier TAssign AssignmentExp
   20              | AdditiveExp

   21 AdditiveExp: MultExp TPlus AdditiveExp
   22            | MultExp TMinus AdditiveExp
   23            | MultExp

   24 MultExp: PrimaryExp TStar MultExp
   25        | PrimaryExp TSlash MultExp
   26        | PrimaryExp TPercent MultExp
   27        | PrimaryExp

   28 PrimaryExp: TIdentifier
   29           | TIntVal


Terminals, with rules where they appear

$end (0) 0
error (256)
TAuto (258)
TDouble (259)
TInt (260) 1 2 10 11
TStruct (261)
TBreak (262)
TElse (263)
TLong (264)
TSwitch (265)
TCase (266)
TEnum (267)
TRegister (268)
TTypedef (269)
TChar (270)
TExtern (271)
TReturn (272) 14 15
TUnion (273)
TConst (274)
TFloat (275)
TShort (276)
TUnsigned (277)
TContinue (278)
TFor (279)
TSigned (280)
TVoid (281)
TDefault (282)
TGoto (283)
TVolatile (284)
TDo (285)
TIf (286)
TStatic (287)
TWhile (288)
TSizeof (289)
TOpenSqBracket (290)
TCloseSqBracket (291)
TOpenBracket (292) 1
TCloseBracket (293) 1
TDot (294)
TBitwiseAnd (295)
TStar (296) 24
TPlus (297) 21
TMinus (298) 22
TTilde (299)
TBang (300)
TSlash (301) 25
TPercent (302) 26
TGreater (303)
TLess (304)
TCarat (305)
TPipe (306)
TQuestion (307)
TColon (308)
TAssign (309) 11 19
TComma (310) 1
TArrow (311)
TIncrement (312)
TDecrement (313)
TLeftShift (314)
TRightShift (315)
TLessEqual (316)
TGreaterEqual (317)
TEquals (318)
TNotEqual (319)
TLogicalAnd (320)
TLogicalOr (321)
TStarEquals (322)
TSlashEquals (323)
TPercentEquals (324)
TPlusEquals (325)
TMinusEquals (326)
TLeftShiftEquals (327)
TRightShiftEquals (328)
TAndEquals (329)
TCaratEquals (330)
TPipeEquals (331)
TOpenCurlyBrace (332) 3 4 5
TCloseCurlyBrace (333) 3 4 5
TSemicolon (334) 10 11 14 15 16 17
TEllipsis (335)
TCharConstVal (336)
TIntVal (337) 29
TFloatVal (338)
TStringLit (339)
TIdentifier (340) 1 2 10 11 19 28
TNewline (341)


Nonterminals, with rules where they appear

$accept (87)
    on left: 0
FunctionDef (88)
    on left: 1, on right: 0
ParamDec (89)
    on left: 2, on right: 1
CompoundStat (90)
    on left: 3 4 5, on right: 1
Statementlist (91)
    on left: 6 7, on right: 3 4 7
Declaratorlist (92)
    on left: 8 9, on right: 3 5 9
Declarator (93)
    on left: 10 11, on right: 8 9
Statement (94)
    on left: 12 13, on right: 6 7
JumpStat (95)
    on left: 14 15, on right: 12
ExpStat (96)
    on left: 16 17, on right: 13
Exp (97)
    on left: 18, on right: 11 14 16
AssignmentExp (98)
    on left: 19 20, on right: 18 19
AdditiveExp (99)
    on left: 21 22 23, on right: 20 21 22
MultExp (100)
    on left: 24 25 26 27, on right: 21 22 23 24 25 26
PrimaryExp (101)
    on left: 28 29, on right: 24 25 26 27


State 0

    0 $accept: . FunctionDef $end

    TInt  shift, and go to state 1

    FunctionDef  go to state 2


State 1

    1 FunctionDef: TInt . TIdentifier TOpenBracket ParamDec TComma ParamDec TCloseBracket CompoundStat

    TIdentifier  shift, and go to state 3


State 2

    0 $accept: FunctionDef . $end

    $end  shift, and go to state 4


State 3

    1 FunctionDef: TInt TIdentifier . TOpenBracket ParamDec TComma ParamDec TCloseBracket CompoundStat

    TOpenBracket  shift, and go to state 5


State 4

    0 $accept: FunctionDef $end .

    $default  accept


State 5

    1 FunctionDef: TInt TIdentifier TOpenBracket . ParamDec TComma ParamDec TCloseBracket CompoundStat

    TInt  shift, and go to state 6

    ParamDec  go to state 7


State 6

    2 ParamDec: TInt . TIdentifier

    TIdentifier  shift, and go to state 8


State 7

    1 FunctionDef: TInt TIdentifier TOpenBracket ParamDec . TComma ParamDec TCloseBracket CompoundStat

    TComma  shift, and go to state 9


State 8

    2 ParamDec: TInt TIdentifier .

    $default  reduce using rule 2 (ParamDec)


State 9

    1 FunctionDef: TInt TIdentifier TOpenBracket ParamDec TComma . ParamDec TCloseBracket CompoundStat

    TInt  shift, and go to state 6

    ParamDec  go to state 10


State 10

    1 FunctionDef: TInt TIdentifier TOpenBracket ParamDec TComma ParamDec . TCloseBracket CompoundStat

    TCloseBracket  shift, and go to state 11


State 11

    1 FunctionDef: TInt TIdentifier TOpenBracket ParamDec TComma ParamDec TCloseBracket . CompoundStat

    TOpenCurlyBrace  shift, and go to state 12

    CompoundStat  go to state 13


State 12

    3 CompoundStat: TOpenCurlyBrace . Declaratorlist Statementlist TCloseCurlyBrace
    4             | TOpenCurlyBrace . Statementlist TCloseCurlyBrace
    5             | TOpenCurlyBrace . Declaratorlist TCloseCurlyBrace

    TInt         shift, and go to state 14
    TReturn      shift, and go to state 15
    TSemicolon   shift, and go to state 16
    TIntVal      shift, and go to state 17
    TIdentifier  shift, and go to state 18

    Statementlist   go to state 19
    Declaratorlist  go to state 20
    Declarator      go to state 21
    Statement       go to state 22
    JumpStat        go to state 23
    ExpStat         go to state 24
    Exp             go to state 25
    AssignmentExp   go to state 26
    AdditiveExp     go to state 27
    MultExp         go to state 28
    PrimaryExp      go to state 29


State 13

    1 FunctionDef: TInt TIdentifier TOpenBracket ParamDec TComma ParamDec TCloseBracket CompoundStat .

    $default  reduce using rule 1 (FunctionDef)


State 14

   10 Declarator: TInt . TIdentifier TSemicolon
   11           | TInt . TIdentifier TAssign Exp TSemicolon

    TIdentifier  shift, and go to state 30


State 15

   14 JumpStat: TReturn . Exp TSemicolon
   15         | TReturn . TSemicolon

    TSemicolon   shift, and go to state 31
    TIntVal      shift, and go to state 17
    TIdentifier  shift, and go to state 18

    Exp            go to state 32
    AssignmentExp  go to state 26
    AdditiveExp    go to state 27
    MultExp        go to state 28
    PrimaryExp     go to state 29


State 16

   17 ExpStat: TSemicolon .

    $default  reduce using rule 17 (ExpStat)


State 17

   29 PrimaryExp: TIntVal .

    $default  reduce using rule 29 (PrimaryExp)


State 18

   19 AssignmentExp: TIdentifier . TAssign AssignmentExp
   28 PrimaryExp: TIdentifier .

    TAssign  shift, and go to state 33

    $default  reduce using rule 28 (PrimaryExp)


State 19

    4 CompoundStat: TOpenCurlyBrace Statementlist . TCloseCurlyBrace
    7 Statementlist: Statementlist . Statement

    TReturn           shift, and go to state 15
    TCloseCurlyBrace  shift, and go to state 34
    TSemicolon        shift, and go to state 16
    TIntVal           shift, and go to state 17
    TIdentifier       shift, and go to state 18

    Statement      go to state 35
    JumpStat       go to state 23
    ExpStat        go to state 24
    Exp            go to state 25
    AssignmentExp  go to state 26
    AdditiveExp    go to state 27
    MultExp        go to state 28
    PrimaryExp     go to state 29


State 20

    3 CompoundStat: TOpenCurlyBrace Declaratorlist . Statementlist TCloseCurlyBrace
    5             | TOpenCurlyBrace Declaratorlist . TCloseCurlyBrace
    9 Declaratorlist: Declaratorlist . Declarator

    TInt              shift, and go to state 14
    TReturn           shift, and go to state 15
    TCloseCurlyBrace  shift, and go to state 36
    TSemicolon        shift, and go to state 16
    TIntVal           shift, and go to state 17
    TIdentifier       shift, and go to state 18

    Statementlist  go to state 37
    Declarator     go to state 38
    Statement      go to state 22
    JumpStat       go to state 23
    ExpStat        go to state 24
    Exp            go to state 25
    AssignmentExp  go to state 26
    AdditiveExp    go to state 27
    MultExp        go to state 28
    PrimaryExp     go to state 29


State 21

    8 Declaratorlist: Declarator .

    $default  reduce using rule 8 (Declaratorlist)


State 22

    6 Statementlist: Statement .

    $default  reduce using rule 6 (Statementlist)


State 23

   12 Statement: JumpStat .

    $default  reduce using rule 12 (Statement)


State 24

   13 Statement: ExpStat .

    $default  reduce using rule 13 (Statement)


State 25

   16 ExpStat: Exp . TSemicolon

    TSemicolon  shift, and go to state 39


State 26

   18 Exp: AssignmentExp .

    $default  reduce using rule 18 (Exp)


State 27

   20 AssignmentExp: AdditiveExp .

    $default  reduce using rule 20 (AssignmentExp)


State 28

   21 AdditiveExp: MultExp . TPlus AdditiveExp
   22            | MultExp . TMinus AdditiveExp
   23            | MultExp .

    TPlus   shift, and go to state 40
    TMinus  shift, and go to state 41

    $default  reduce using rule 23 (AdditiveExp)


State 29

   24 MultExp: PrimaryExp . TStar MultExp
   25        | PrimaryExp . TSlash MultExp
   26        | PrimaryExp . TPercent MultExp
   27        | PrimaryExp .

    TStar     shift, and go to state 42
    TSlash    shift, and go to state 43
    TPercent  shift, and go to state 44

    $default  reduce using rule 27 (MultExp)


State 30

   10 Declarator: TInt TIdentifier . TSemicolon
   11           | TInt TIdentifier . TAssign Exp TSemicolon

    TAssign     shift, and go to state 45
    TSemicolon  shift, and go to state 46


State 31

   15 JumpStat: TReturn TSemicolon .

    $default  reduce using rule 15 (JumpStat)


State 32

   14 JumpStat: TReturn Exp . TSemicolon

    TSemicolon  shift, and go to state 47


State 33

   19 AssignmentExp: TIdentifier TAssign . AssignmentExp

    TIntVal      shift, and go to state 17
    TIdentifier  shift, and go to state 18

    AssignmentExp  go to state 48
    AdditiveExp    go to state 27
    MultExp        go to state 28
    PrimaryExp     go to state 29


State 34

    4 CompoundStat: TOpenCurlyBrace Statementlist TCloseCurlyBrace .

    $default  reduce using rule 4 (CompoundStat)


State 35

    7 Statementlist: Statementlist Statement .

    $default  reduce using rule 7 (Statementlist)


State 36

    5 CompoundStat: TOpenCurlyBrace Declaratorlist TCloseCurlyBrace .

    $default  reduce using rule 5 (CompoundStat)


State 37

    3 CompoundStat: TOpenCurlyBrace Declaratorlist Statementlist . TCloseCurlyBrace
    7 Statementlist: Statementlist . Statement

    TReturn           shift, and go to state 15
    TCloseCurlyBrace  shift, and go to state 49
    TSemicolon        shift, and go to state 16
    TIntVal           shift, and go to state 17
    TIdentifier       shift, and go to state 18

    Statement      go to state 35
    JumpStat       go to state 23
    ExpStat        go to state 24
    Exp            go to state 25
    AssignmentExp  go to state 26
    AdditiveExp    go to state 27
    MultExp        go to state 28
    PrimaryExp     go to state 29


State 38

    9 Declaratorlist: Declaratorlist Declarator .

    $default  reduce using rule 9 (Declaratorlist)


State 39

   16 ExpStat: Exp TSemicolon .

    $default  reduce using rule 16 (ExpStat)


State 40

   21 AdditiveExp: MultExp TPlus . AdditiveExp

    TIntVal      shift, and go to state 17
    TIdentifier  shift, and go to state 50

    AdditiveExp  go to state 51
    MultExp      go to state 28
    PrimaryExp   go to state 29


State 41

   22 AdditiveExp: MultExp TMinus . AdditiveExp

    TIntVal      shift, and go to state 17
    TIdentifier  shift, and go to state 50

    AdditiveExp  go to state 52
    MultExp      go to state 28
    PrimaryExp   go to state 29


State 42

   24 MultExp: PrimaryExp TStar . MultExp

    TIntVal      shift, and go to state 17
    TIdentifier  shift, and go to state 50

    MultExp     go to state 53
    PrimaryExp  go to state 29


State 43

   25 MultExp: PrimaryExp TSlash . MultExp

    TIntVal      shift, and go to state 17
    TIdentifier  shift, and go to state 50

    MultExp     go to state 54
    PrimaryExp  go to state 29


State 44

   26 MultExp: PrimaryExp TPercent . MultExp

    TIntVal      shift, and go to state 17
    TIdentifier  shift, and go to state 50

    MultExp     go to state 55
    PrimaryExp  go to state 29


State 45

   11 Declarator: TInt TIdentifier TAssign . Exp TSemicolon

    TIntVal      shift, and go to state 17
    TIdentifier  shift, and go to state 18

    Exp            go to state 56
    AssignmentExp  go to state 26
    AdditiveExp    go to state 27
    MultExp        go to state 28
    PrimaryExp     go to state 29


State 46

   10 Declarator: TInt TIdentifier TSemicolon .

    $default  reduce using rule 10 (Declarator)


State 47

   14 JumpStat: TReturn Exp TSemicolon .

    $default  reduce using rule 14 (JumpStat)


State 48

   19 AssignmentExp: TIdentifier TAssign AssignmentExp .

    $default  reduce using rule 19 (AssignmentExp)


State 49

    3 CompoundStat: TOpenCurlyBrace Declaratorlist Statementlist TCloseCurlyBrace .

    $default  reduce using rule 3 (CompoundStat)


State 50

   28 PrimaryExp: TIdentifier .

    $default  reduce using rule 28 (PrimaryExp)


State 51

   21 AdditiveExp: MultExp TPlus AdditiveExp .

    $default  reduce using rule 21 (AdditiveExp)


State 52

   22 AdditiveExp: MultExp TMinus AdditiveExp .

    $default  reduce using rule 22 (AdditiveExp)


State 53

   24 MultExp: PrimaryExp TStar MultExp .

    $default  reduce using rule 24 (MultExp)


State 54

   25 MultExp: PrimaryExp TSlash MultExp .

    $default  reduce using rule 25 (MultExp)


State 55

   26 MultExp: PrimaryExp TPercent MultExp .

    $default  reduce using rule 26 (MultExp)


State 56

   11 Declarator: TInt TIdentifier TAssign Exp . TSemicolon

    TSemicolon  shift, and go to state 57


State 57

   11 Declarator: TInt TIdentifier TAssign Exp TSemicolon .

    $default  reduce using rule 11 (Declarator)
